<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:imeOptions="actionGo"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <Space
        android:layout_width="0dp"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/login"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:onClick="signup"
        android:background="@drawable/rounded_button"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textStyle="normal|bold" />

    <Space
        android:layout_width="0dp"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textAppearance="@style/BlackText" />

        <TextView
            android:id="@+id/go_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="go_to_login"
            android:text="@string/login"
            android:paddingStart="3sp"
            android:paddingEnd="3dp"
            android:background="@drawable/dotted_lines"
            android:textAppearance="@style/LinkText" />
    </LinearLayout>

</LinearLayout>